force-app/main/default/objects/ucinn_ascendv2__Salutation_Correction_Mapping__c/ucinn_ascendv2__Salutation_Correction_Mapping__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Salutation Correction Mapping</label>
</CustomObject>