force-app/main/default/objects/ucinn_ascendv2__Salutation_Correction_Mapping__c/fields/ucinn_ascendv2__Prefix_Replaces_Prof_Designation__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Prefix_Replaces_Prof_Designation__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Prefix Replaces Prof Designation</label>
    <type>Checkbox</type>
</CustomField>