force-app/main/default/objects/ucinn_ascendv2__Salutation_Correction_Mapping__c/fields/ucinn_ascendv2__Prefixes__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Prefixes__c</fullName>
    <label>Prefixes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>